# python-project-49

./: .gitignore  .travis.yml  Makefile  README.md  game_logic.py  pyproject.toml
brain_games/: calc.py  cli.py  even.py  flow.py  templates.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  greet.py
nikolaytk87_brain_games.egg-info/: PKG-INFO  SOURCES.txt
