[tool.poetry]
name = "nikolaytk87__brain_games"
version = "0.1.0"
description = ""
authors = ["Nick <nick@tt.local>"]
packages = [
	{ include = 'brain_games' },
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
